Реализация отправки данных форм на сервер

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="header__left-block">
             <nav class="header__links">
-                <a href="#" class="header__link">Доставка питания</a>
+                <a href="#" class="header__link">Доставaка питания</a>
                 <a href="#" class="header__link">Второй пункт</a>
             </nav>
         </div>
