--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                     </div>
                   </div>
                 </div>
+                <ol class="carousel-indicators"></ol>
             </div>
         </div>
     </div>
